CSS 2.1 failure: abspos-non-replaced-width-margin-000, abspos-replaced-width-margin-000 https://bugs.webkit.org/show_bug.cgi?id=47148

Reviewed by David Hyatt.

Source/WebCore:

* rendering/RenderBlock.h:
* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::startOffsetForLine): Return offset from right, rather than offset from left + logicalwidth
* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::startAlignedOffsetForLine):
      Return the correct alignment for RTL blocks too. Looks like neither FF or Opera do this correctly.
      Covered by new test left-right-center-inline-alignment-in-ltr-and-rtl-blocks.html
* rendering/RenderBox.cpp:
(WebCore::computeInlineStaticDistance):
    - The CSS 2.1 tests now require UAs to use the parent block's direction (rather than the
      containing block's direction) when computing static distance. The container block's direction
      is still used in the other width and offset related calculations.
    - In the context of this function, the logicalRight value is just an element that will be used later to calculate
      the correct logicalLeft position for the RTL block. So whereas an LTR block can substract containerBlock->borderLogicalLeft()
      in this function directly, an RTL block has to add it here so that will be later subtracted from availableSpace to get
      logicalLeft in computePositionedLogicalWidthUsing().

(WebCore::RenderBox::computePositionedLogicalWidth):
   - Update comments and use the container block's direction except when calculating the static distance.
   - Remove the notion of a quirks mode in this function and for calculating the position of replaced and non-replaced
     blocks generally. This is in line with both FF4 and Opera - neither of which have a quirks mode for them.
(WebCore::RenderBox::computePositionedLogicalWidthUsing):
   - Update comments and use the container block's direction except when calculating the static distance.
(WebCore::RenderBox::computePositionedLogicalHeight):
   - Update comments.
(WebCore::RenderBox::computePositionedLogicalWidthReplaced):
   - Update comments and use the container block's direction except when calculating the static distance.
   - If the containing block is RTL, always assume that values are over-constrained.
(WebCore::RenderBox::computePositionedLogicalHeightReplaced):
   - Update comments.

LayoutTests:

* platform/chromium-linux/css2.1/20110323/abspos-non-replaced-width-margin-000-expected.png:
* platform/chromium-linux/css2.1/20110323/abspos-replaced-width-margin-000-expected.png:
  New results for CSS 2.1 reference tests. These match exactly the reference test results.

* fast/inline/left-right-center-inline-alignment-in-ltr-and-rtl-blocks.html: Added.
* platform/chromium-linux/fast/inline/left-right-center-inline-alignment-in-ltr-and-rtl-blocks-expected.png: Added.
* platform/chromium-linux/fast/inline/left-right-center-inline-alignment-in-ltr-and-rtl-blocks-expected.txt: Added.
  New test for left,right and center alignment of inline LTR and RTL blocks. FF and Opera don't pass this test.

* fast/block/positioning/absolute-position-direction-strict.html: Removed.
* fast/block/positioning/absolute-position-direction.html: Renamed from LayoutTests/fast/block/positioning/absolute-position-direction-quirk.html.
* platform/chromium-linux/fast/block/positioning/absolute-position-direction-expected.png: Renamed from LayoutTests/platform/chromium-linux/fast/block/positioning/absolute-position-direction-quirk-expected.png.
* platform/chromium-linux/fast/block/positioning/absolute-position-direction-strict-expected.png: Removed.
* platform/chromium-win/fast/block/positioning/absolute-position-direction-expected.png: Renamed from LayoutTests/platform/chromium-win/fast/block/positioning/absolute-position-direction-quirk-expected.png.
* platform/chromium-win/fast/block/positioning/absolute-position-direction-expected.txt: Renamed from LayoutTests/platform/chromium-win/fast/block/positioning/absolute-position-direction-quirk-expected.txt.
* platform/chromium-win/fast/block/positioning/absolute-position-direction-strict-expected.png: Removed.
* platform/chromium-win/fast/block/positioning/absolute-position-direction-strict-expected.txt: Removed.
* platform/gtk/fast/block/positioning/absolute-position-direction-expected.png: Renamed from LayoutTests/platform/gtk/fast/block/positioning/absolute-position-direction-quirk-expected.png.
* platform/gtk/fast/block/positioning/absolute-position-direction-expected.txt: Renamed from LayoutTests/platform/gtk/fast/block/positioning/absolute-position-direction-quirk-expected.txt.
* platform/gtk/fast/block/positioning/absolute-position-direction-strict-expected.png: Removed.
* platform/gtk/fast/block/positioning/absolute-position-direction-strict-expected.txt: Removed.
* platform/mac-leopard/fast/block/positioning/absolute-position-direction-expected.png: Renamed from LayoutTests/platform/mac-leopard/fast/block/positioning/absolute-position-direction-quirk-expected.png.
* platform/mac-leopard/fast/block/positioning/absolute-position-direction-strict-expected.png: Removed.
* platform/mac/css2.1/20110323/abspos-non-replaced-width-margin-000-expected.txt:
* platform/mac/css2.1/20110323/abspos-replaced-width-margin-000-expected.txt:
* platform/mac/fast/block/positioning/absolute-position-direction-expected.png: Renamed from LayoutTests/platform/mac/fast/block/positioning/absolute-position-direction-quirk-expected.png.
* platform/mac/fast/block/positioning/absolute-position-direction-expected.txt: Renamed from LayoutTests/platform/mac/fast/block/positioning/absolute-position-direction-quirk-expected.txt.
* platform/mac/fast/block/positioning/absolute-position-direction-strict-expected.png: Removed.
* platform/mac/fast/block/positioning/absolute-position-direction-strict-expected.txt: Removed.
* platform/qt/fast/block/positioning/absolute-position-direction-expected.png: Renamed from LayoutTests/platform/qt/fast/block/positioning/absolute-position-direction-quirk-expected.png.
* platform/qt/fast/block/positioning/absolute-position-direction-expected.txt: Renamed from LayoutTests/platform/qt/fast/block/positioning/absolute-position-direction-quirk-expected.txt.
* platform/qt/fast/block/positioning/absolute-position-direction-strict-expected.png: Removed.
* platform/qt/fast/block/positioning/absolute-position-direction-strict-expected.txt: Removed.
  These tests are superseded by abspos-non-replaced-width-margin-000.htm. Using the parent() block's
  direction to compute static distance is now a strict requirement for CSS 2.1, rather than an IE quirk.

Canonical link: https://commits.webkit.org/84570@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95726 268f45cc-cd09-0410-ab3c-d52691b4dbfc